--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 06:08:45 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 18:58:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dca" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -564,7 +564,7 @@ margin: 0rem !important;
                   <nav class="faq_content w-dropdown-list">
                     <div data-w-id="a2b04943-19c9-1a6c-b05d-56651deac6b9" class="services_background"></div>
                     <div class="services_paragraph">
-                      <p>Weby vytvářím na platformě Webflow, která umožňuje rychlou správu obsahu a běží na výkonných serverech.</p>
+                      <p>Weby vytvářím na platformě Webflow, která umožňuje rychlou správu obsahu a jsou funkční pro všechny typy webů.</p>
                     </div>
                   </nav>
                 </div>
@@ -917,7 +917,7 @@ margin: 0rem !important;
                       <div class="services-text-tag text-style-allcaps text-size-tiny">Html5</div>
                       <div class="services-text-tag text-style-allcaps text-size-tiny">TIskoviny</div>
                     </div>
-                    <h2 class="heading-style-h3">Colosseu TIcket</h2>
+                    <h2 class="heading-style-h3">Colosseum TIcket</h2>
                   </div>
                   <div class="swiper-slide">
                     <div class="ratio-box _3-2">
