--- a/o-mne.html
+++ b/o-mne.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 18:58:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 19:15:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dd6" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -448,7 +448,7 @@ margin: 0rem !important;
                             <h3 class="heading-style-h3_services">Vytvářím funkční weby ve Webflow, které jsou přehledné a snadno se spravují i po spuštění. Využívám možnosti no<strong>‑</strong>code platformy naplno, ať jde o firemní prezentaci, blog nebo web s dynamickým obsahem.</h3>
                           </div>
                           <div class="services-list">
-                            <div class="services-list-text text-style-allcaps text-size-small">Nabízené služby:</div>
+                            <div class="services-list-text">Nabízené služby:</div>
                             <div class="services-items-content">
                               <div class="services-item">
                                 <div style="opacity:0;-webkit-transform:translate3d(0, 12px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 12px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 12px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 12px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="services-text _501">Prezentační weby</div>
