--- a/o-mne.html
+++ b/o-mne.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 19:15:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 06 2025 11:05:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dd6" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -442,7 +442,7 @@ margin: 0rem !important;
                   <div class="services-tabs-content w-tab-content">
                     <div data-w-tab="Webflow" class="w-tab-pane w--tab-active">
                       <div class="w-layout-grid services-content-grid">
-                        <div id="w-node-f91360eb-ad5c-94ab-b74a-19cf6fb9b7df-bf535dd6" class="services-left-box"><img sizes="(max-width: 1600px) 100vw, 1600px" srcset="images/new-webflow-logo-p-500.jpg 500w, images/new-webflow-logo-p-800.jpg 800w, images/new-webflow-logo-p-1080.jpg 1080w, images/new-webflow-logo.jpg 1600w" alt="Korporátní identita" src="images/new-webflow-logo.jpg" loading="eager" class="services-image"></div>
+                        <div id="w-node-f91360eb-ad5c-94ab-b74a-19cf6fb9b7df-bf535dd6" class="services-left-box"><img sizes="(max-width: 1919px) 100vw, 1920px" srcset="images/webdlow-cover_1webdlow-cover.avif 500w, images/webdlow-cover_1webdlow-cover.avif 800w, images/webdlow-cover_1webdlow-cover.avif 1080w, images/webdlow-cover_1.avif 1920w" alt="Korporátní identita" src="images/webdlow-cover_1.avif" loading="eager" class="services-image"></div>
                         <div id="w-node-f91360eb-ad5c-94ab-b74a-19cf6fb9b7e1-bf535dd6" class="services-right-box">
                           <div class="padding-top padding-small">
                             <h3 class="heading-style-h3_services">Vytvářím funkční weby ve Webflow, které jsou přehledné a snadno se spravují i po spuštění. Využívám možnosti no<strong>‑</strong>code platformy naplno, ať jde o firemní prezentaci, blog nebo web s dynamickým obsahem.</h3>
@@ -500,7 +500,7 @@ margin: 0rem !important;
                     </div>
                     <div data-w-tab="Webdesign" class="w-tab-pane">
                       <div class="w-layout-grid services-content-grid">
-                        <div id="w-node-cd1ff8d5-6e0e-ebd6-11b9-412e7a3519c6-bf535dd6" class="services-left-box"><img sizes="100vw" srcset="images/webdesign_cover-min-p-500.jpg 500w, images/webdesign_cover-min-p-800.jpg 800w, images/webdesign_cover-min-p-1080.jpg 1080w, images/webdesign_cover-min.webp 1400w" alt="Webdesign" src="images/webdesign_cover-min.webp" loading="eager" class="services-image"></div>
+                        <div id="w-node-cd1ff8d5-6e0e-ebd6-11b9-412e7a3519c6-bf535dd6" class="services-left-box"><img sizes="100vw" srcset="images/webdesign-cover_1webdesign-cover.avif 500w, images/webdesign-cover_1webdesign-cover.avif 800w, images/webdesign-cover_1webdesign-cover.avif 1080w, images/webdesign-cover_1.avif 1920w" alt="Webdesign" src="images/webdesign-cover_1.avif" loading="eager" class="services-image"></div>
                         <div id="w-node-cd1ff8d5-6e0e-ebd6-11b9-412e7a3519c8-bf535dd6" class="services-right-box">
                           <div class="padding-top padding-small">
                             <h3 class="heading-style-h3_services">Každá firma si zaslouží individuální a kreativní vystupování na internetu,  které není tvořeno šablonou.</h3>
@@ -531,7 +531,7 @@ margin: 0rem !important;
                     </div>
                     <div data-w-tab="Vizual" class="w-tab-pane">
                       <div class="w-layout-grid services-content-grid">
-                        <div id="w-node-abd4662d-70d4-8511-72fa-45cb6c9f9732-bf535dd6" class="services-left-box"><img sizes="100vw" srcset="images/branding_aboutme-p-500.jpg 500w, images/branding_aboutme-p-800.jpg 800w, images/branding_aboutme.webp 1100w" alt="Grafické práce" src="images/branding_aboutme.webp" loading="eager" class="services-image"></div>
+                        <div id="w-node-abd4662d-70d4-8511-72fa-45cb6c9f9732-bf535dd6" class="services-left-box"><img sizes="100vw" srcset="images/Colosseum_poster_small_1Colosseum_poster_small.avif 500w, images/Colosseum_poster_small_1Colosseum_poster_small.avif 800w, images/Colosseum_poster_small_1Colosseum_poster_small.avif 1080w, images/Colosseum_poster_small_1.avif 2000w" alt="Grafické práce" src="images/Colosseum_poster_small_1.avif" loading="eager" class="services-image"></div>
                         <div id="w-node-ce5ac4b4-c560-6117-5994-50f545f5f77c-bf535dd6" class="services-right-box">
                           <div class="padding-top padding-small">
                             <h3 class="heading-style-h3_services">Přijímám zakázky v oblasti grafiky pro různé účely. Bez ohledu na to, zda potřebujete reklamní grafiku, úpravu obrázků nebo jednoduchou sazbu.</h3>
