--- a/projekt-colosseum-ticket.html
+++ b/projekt-colosseum-ticket.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 19:15:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 06 2025 11:05:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68120fca320f33da1bb0e929" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -462,13 +462,13 @@ margin: 0rem !important;
               </div>
               <div class="next-prev-project">
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="projekt-probinex.html" class="my-custom-prev w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="projekt-bitbeli.html" class="my-custom-prev w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">předchozí</div>
                   </a>
                 </div>
                 <div class="vertical-divider"></div>
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="projekt-worm-up.html" class="my-custom-next w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="projekt-probinex.html" class="my-custom-next w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">následující</div>
                   </a>
                 </div>
