--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 06 2025 11:16:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 06 2025 12:45:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dd7" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -54,15 +54,7 @@ html.lenis {
      background:rgb(121, 15, 255);
      border-radius:10px;
 }
-</style>
-  <style>
-html { opacity: 0; transition: opacity 0s ease-out; }
-html.webflow-loaded { opacity: 1; }
-</style>
-  <script>
-var Webflow = Webflow || [];
-Webflow.push(function() { $('html').addClass('webflow-loaded') });
-</script><!--  Swiper v11 CSS  -->
+</style><!--  Swiper v11 CSS  -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <style>
   /* Styl pro progress bar */
