--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 05:58:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu May 22 2025 21:12:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dca" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -420,31 +420,19 @@ margin: 0rem !important;
           <div id="video-hero" class="hero_background-video-mobile w-embed">
             <div id="video-container">
             </div>
-            <video id="video" autoplay="autoplay" muted="muted" loop="loop" playsinline="">
+            <video id="video-hero" autoplay="" muted="" loop="" playsinline="">
               <source src="https://dfdesigner.s3.eu-north-1.amazonaws.com/Main+Background+Mobile.mp4" type="video/mp4">
             </video>
             <style>
-    video {
+    #video-hero {
         position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -4;
-        height: 100vh;
-        width: 100%;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        transform: translate(-50%, -50%);
         object-fit: cover;
-    }
-    #video-container {
-        height: 100vh;
-        width: 100%;
-        background-image: url("https://dfdesigner.s3.eu-north-1.amazonaws.com/Main+Background+Mobile.mp4");
-        background-color: transparent;
-        position: relative;
-        z-index: -3;
-        top: 0;
-        left: 0;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
+        z-index: -4;
     }
 </style>
           </div>
@@ -547,7 +535,7 @@ margin: 0rem !important;
                 <div class="margin-bottom margin-large">
                   <p>Nabízím řadu služeb, které posunou váš projekt.</p>
                 </div>
-                <div data-w-id="b9987cf4-72ec-80a4-8735-cbe795991403" class="services_image-wrap"><img data-w-id="6ce4c1e9-3e82-5db6-aab9-81d866c0a1e7" sizes="(max-width: 1919px) 100vw, 1920px" alt="" src="images/webdlow-cover_1.avif" loading="lazy" srcset="images/webdlow-cover_1webdlow-cover.avif 500w, images/webdlow-cover_1webdlow-cover.avif 800w, images/webdlow-cover_1webdlow-cover.avif 1080w, images/webdlow-cover_1.avif 1920w" class="services_image webflow"><img sizes="(max-width: 1085px) 100vw, 1085px" srcset="images/Intro_logo_showcase_1Intro_logo_showcase.avif 500w, images/Intro_logo_showcase_1.avif 1085w" alt="" src="images/Intro_logo_showcase_1.avif" loading="lazy" class="services_image branding"><img sizes="100vw" srcset="images/webdesign-cover_1webdesign-cover.avif 500w, images/webdesign-cover_1webdesign-cover.avif 800w, images/webdesign-cover_1webdesign-cover.avif 1080w, images/webdesign-cover_1.avif 1920w" alt="" src="images/webdesign-cover_1.avif" loading="lazy" class="services_image webdesign"><img data-w-id="b9987cf4-72ec-80a4-8735-cbe795991404" sizes="100vw" alt="" src="images/Colosseum_instagram_1.avif" loading="lazy" srcset="images/Colosseum_instagram_1Colosseum_instagram.avif 500w, images/Colosseum_instagram_1Colosseum_instagram.avif 800w, images/Colosseum_instagram_1Colosseum_instagram.avif 1080w, images/Colosseum_instagram_1.avif 2000w" class="services_image vizual">
+                <div data-w-id="b9987cf4-72ec-80a4-8735-cbe795991403" class="services_image-wrap"><img data-w-id="6ce4c1e9-3e82-5db6-aab9-81d866c0a1e7" sizes="(max-width: 1919px) 100vw, 1920px" alt="" src="images/webdlow-cover_1.avif" loading="lazy" srcset="images/webdlow-cover_1webdlow-cover.avif 500w, images/webdlow-cover_1webdlow-cover.avif 800w, images/webdlow-cover_1webdlow-cover.avif 1080w, images/webdlow-cover_1.avif 1920w" class="services_image webflow"><img sizes="(max-width: 1085px) 100vw, 1085px" srcset="images/Intro_logo_showcase_1Intro_logo_showcase.avif 500w, images/Intro_logo_showcase_1.avif 1085w" alt="" src="images/Intro_logo_showcase_1.avif" loading="lazy" class="services_image branding"><img sizes="(max-width: 1919px) 100vw, 1920px" srcset="images/webdesign-cover_1webdesign-cover.avif 500w, images/webdesign-cover_1webdesign-cover.avif 800w, images/webdesign-cover_1webdesign-cover.avif 1080w, images/webdesign-cover_1.avif 1920w" alt="" src="images/webdesign-cover_1.avif" loading="lazy" class="services_image webdesign"><img data-w-id="b9987cf4-72ec-80a4-8735-cbe795991404" sizes="(max-width: 2000px) 100vw, 2000px" alt="" src="images/Colosseum_instagram_1.avif" loading="lazy" srcset="images/Colosseum_instagram_1Colosseum_instagram.avif 500w, images/Colosseum_instagram_1Colosseum_instagram.avif 800w, images/Colosseum_instagram_1Colosseum_instagram.avif 1080w, images/Colosseum_instagram_1.avif 2000w" class="services_image vizual">
                   <div data-poster-url="https://uploads-ssl.webflow.com/64b8d3c3e7ffc183ddfa8a14/64e3d6dfe3b2a1ff08b710a2_Motion Cover-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/64b8d3c3e7ffc183ddfa8a14/64e3d6dfe3b2a1ff08b710a2_Motion Cover-transcode.mp4,https://uploads-ssl.webflow.com/64b8d3c3e7ffc183ddfa8a14/64e3d6dfe3b2a1ff08b710a2_Motion Cover-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="services_image motion w-background-video w-background-video-atom"><video id="b3a55d62-c79d-8f89-e755-b77061d7f8b3-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/64b8d3c3e7ffc183ddfa8a14/64e3d6dfe3b2a1ff08b710a2_Motion Cover-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
                       <source src="https://uploads-ssl.webflow.com/64b8d3c3e7ffc183ddfa8a14/64e3d6dfe3b2a1ff08b710a2_Motion Cover-transcode.mp4" data-wf-ignore="true">
                       <source src="https://uploads-ssl.webflow.com/64b8d3c3e7ffc183ddfa8a14/64e3d6dfe3b2a1ff08b710a2_Motion Cover-transcode.webm" data-wf-ignore="true">
